Bug 498906 - Skanpage does not show a Legal page size choice for a scanner and source that support it, and for which Legal size is offered in Skanlite
Summary: Skanpage does not show a Legal page size choice for a scanner and source that...
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-20 00:01 UTC by rltechnique
Modified: 2025-02-04 17:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rltechnique 2025-01-20 00:01:40 UTC
SUMMARY
In SkanLite, the ‘Scan area size’ dropdown has more choices when the ADF is selected in ‘Scan source’ - the flatbed is limited to letter/A4 whereas the ADF can handle longer sheets. But in SkanPage the ‘Scan area size’ dropdown presents the same choices regardless of what is selected as ‘Scan source’, so the ‘Legal’ option is missing - it is present in ScanLite.  The ‘Custom’ setting can be used to specify the size of a Legal sheet, but it would be good to have it working as it does in SkanLite.

STEPS TO REPRODUCE
Compare the behavior of SkanLite vs SkanPage when doing the following:
1. Launch the program
2. Choose ADF as the source
3. Check out the page size options available

OBSERVED RESULT
'Legal' (as well as a couple other sizes) become available in SkanLite when ADF is selected as source, but not in SkanPage.

EXPECTED RESULT
Both programs should present the same choices in this situation.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 24.04
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.13
Kernel Version: 6.8.0-51-generic (64-bit)
Graphics Platform: offscreen
Processors: 8 × Intel® Core™ i7-4790 CPU @ 3.60GHz
Memory: 15.5 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1050/PCIe/SSE2
Comment 1 rltechnique 2025-01-20 00:07:05 UTC
I posted a question about this on Discuss and got a response back saying that they too were getting the same result.  This is still the case with the most recent ver of SkanPage.   A Bugzilla search leads me to believe that this issue has not yet been reported..
Comment 2 John Kizer 2025-01-23 07:04:50 UTC
Hi - thanks for your bug report! I can reproduce this on Fedora KDE 41, Skanpage 24.12.1.
Comment 3 Bug Janitor Service 2025-02-01 18:34:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/ksanecore/-/merge_requests/27
Comment 4 Alexander Stippich 2025-02-04 17:53:55 UTC
Git commit efb128943e17d092aaeba86306efc6b507493c87 by Alexander Stippich.
Committed on 04/02/2025 at 17:52.
Pushed by astippich into branch 'master'.

re-evaluate page size option when options are reloaded
sizes may change with Flatbed and ADF scanners
also remember previous sizes and try to re-apply
Related: bug 464335, bug 460262

M  +5    -1    src/interface_p.cpp
M  +4    -0    src/interface_p.h
M  +105  -72   src/options/pagesizeoption.cpp
M  +4    -0    src/options/pagesizeoption.h

https://invent.kde.org/libraries/ksanecore/-/commit/efb128943e17d092aaeba86306efc6b507493c87