re-evaluate page size option when options are reloaded sizes may change with Flatbed and ADF scanners also remember previous sizes and try to re-apply

BUG: 498906
BUG: 464335
BUG: 460262